--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,6 +14,8 @@
     border: 1px solid #b51414;
     padding-left: 10px;
     padding-right: 10px;
+    max-width: 100vw;
+    margin: 0;
 }
 
 .user-role-section > h2 {
