--- a/public/index.ejs
+++ b/public/index.ejs
@@ -25,6 +25,7 @@
             s.parentNode.insertBefore(wf, s);
         })();
     </script>
-    <script src="js/bundle.js"></script>
+    <script src="<%= vendorPath %>" charset="utf-8"></script>
+    <script src="<%= bundlePath %>" charset="utf-8"></script>
 </body>
 </html>
