--- a/public/index.ejs
+++ b/public/index.ejs
@@ -25,7 +25,9 @@
             s.parentNode.insertBefore(wf, s);
         })();
     </script>
+    <% if (vendorPath) { %>
     <script src="<%= vendorPath %>" charset="utf-8"></script>
+    <% } %>
     <script src="<%= bundlePath %>" charset="utf-8"></script>
 </body>
 </html>
